# reddcoin

./: .cirrus.yml  .gitignore  Makefile.am  README.md  configure.ac
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  good_first_issue.md  gui_issue.md
.tx/: config
build_msvc/: bitcoin_config.h  vcpkg.json
build_msvc/libbitcoin_qt/: libbitcoin_qt.vcxproj
ci/lint/: 04_install.sh  06_script.sh
ci/test/: 00_setup_env_i686_centos.sh  00_setup_env_native_asan.sh  00_setup_env_native_fuzz.sh  00_setup_env_native_fuzz_with_valgrind.sh  (+8 more)
depends/: Makefile  funcs.mk  packages.md
doc/: README.md  build-android.md  build-freebsd.md  build-osx.md  build-unix.md  dependencies.md  reddcoin-conf.md  release-notes.md  release-process.md
doc/man/: Makefile.am  reddcoin-cli.1  reddcoin-qt.1  reddcoin-tx.1  reddcoin-util.1  reddcoin-wallet.1  reddcoind.1
share/: setup.nsi.in
src/: Makefile.am  Makefile.bench.include  Makefile.qt.include  Makefile.qt_locale.include  Makefile.qttest.include  Makefile.test.include  amount.h  arith_uint256.cpp  arith_uint256.h  bitcoin-cli-res.rc  bitcoin-cli.cpp  bitcoin-tx-res.rc  bitcoin-tx.cpp  bitcoin-util-res.rc  bitcoin-util.cpp  bitcoin-wallet-res.rc  bitcoin-wallet.cpp  bitcoind-res.rc  bitcoind.cpp  blockencodings.cpp  chain.cpp  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.cpp  chainparamsseeds.h  clientversion.cpp  coins.cpp  coins.h  core_write.cpp  deploymentinfo.cpp  deploymentstatus.cpp  dummywallet.cpp  fs.cpp  init.cpp  logging.cpp  logging.h  miner.cpp  miner.h  net.h  (+18 more)
(+472 files in other folders)
