dist_man1_MANS=

if BUILD_BITCOIND
  dist_man1_MANS+=reddcoind.1
endif

if ENABLE_QT
  dist_man1_MANS+=reddcoin-qt.1
endif

if BUILD_BITCOIN_CLI
  dist_man1_MANS+=reddcoin-cli.1
endif

if BUILD_BITCOIN_TX
  dist_man1_MANS+=reddcoin-tx.1
endif

if BUILD_BITCOIN_UTIL
  dist_man1_MANS+=reddcoin-util.1
endif

if ENABLE_WALLET
if BUILD_BITCOIN_WALLET
  dist_man1_MANS+=reddcoin-wallet.1
endif
endif
